--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -88,11 +88,11 @@ window#waybar {
 
 
 #battery {
-    color: #9ece6a;
+    color: #f4d9e1;
 }
 
 #battery.charging {
-    color: #9ece6a;
+    color: #f4d9e1;
 }
 
 #battery.warning:not(.charging) {
@@ -141,9 +141,9 @@ window#waybar {
     background-color: #282828;
     border-radius: 0px 24px 0px 0px;
     margin: 0px 0px 0px 0px;
-    padding: 0 20px 0 13px;
+    padding: 0 15px 0 10px;
     /*border-right: solid 1px #282738;*/
-    font-size: 20px;
+    font-size: 25px;
 }
 
 #custom-launcher button:hover {
